           libSBML NEWS -- History of user-visible changes

======================================================================
Version 4.1.0-b2 (Released 2010-02-02)
======================================================================

This is a second beta version which adds further support for SBML
Level 3 as defined in the Level 3 specification Release 1 (Candidate)
published 2009-12-31.

* L3 Features introduced in this version:

 - setFoo(xxx) functions for all new attributes in Level 3 Core
 
 - unsetFoo() functions for all new optional attributes
 
 - The "sbml:units" attribute on the MathML <cn> element is now
   supported.  This includes reading and writing and getUnits,
   isSetUnits, setUnits and unsetUnits functions for manipulating the
   attribute on an ASTNode.
   
 - Support for the <csymbol> "avogadro"

 - The ModelHistory element is now permissible on any SBML object

 - Conversion to SBML Level 3 from Levels 1 & 2.


* The following Level 3 Features are not yet implemented:

 - Validation of SBML Level 3 models

 - Conversion from Level 3 to other Levels/Versions of SBML


* Here is an important note about default values of attributes: SBML
  L3 does not specify default values, and libSBML-4.1.0-b1 followed
  this principle.  Users reported that this on occasion caused
  problems.  Although we are working on a more robust solution, the
  current libSBML version constructs objects WITHOUT default values
  but provides the initDefaults() functions to apply the L2 default
  values, regardless of SBML Level.  In other words,
  
	Unit * unit = new Unit(3,1);
	unit->initDefaults();
	
  will assign values to the relevant attributes.


* Additional new features in this release:

 - There are two new functions that allow within SBML transformations,
   removing components that software may be unable to interpret and
   replacing them with appropriate attributes etc.  The first
   'expandFunctionDefinitions' replaces any call to a function with