@@ -34,6 +34,7 @@ LIBSBML_CPP_NAMESPACE_BEGIN
 
 SBMLNamespaces::SBMLNamespaces(unsigned int level, unsigned int version)
 {
+  /* for the moment make default l2v4 */
   mLevel = level;
   mVersion = version;
   mNamespaces = new XMLNamespaces();
@@ -43,7 +44,17 @@ SBMLNamespaces::SBMLNamespaces(unsigned int level, unsigned int version)
   case 1:
     mNamespaces->add(SBML_XMLNS_L1);
     break;
+  case 3:
+    switch (version)
+    {
+    case 1:
+    default:
+      mNamespaces->add(SBML_XMLNS_L3V1);
+      break;
+    }
+    break;
   case 2:
+  default:
     switch (version)
     {
     case 1:
@@ -58,16 +69,6 @@ SBMLNamespaces::SBMLNamespaces(unsigned int level, unsigned int version)
     case 4:
     default:
       mNamespaces->add(SBML_XMLNS_L2V4);
-      break;
-    }
-    break;
-  case 3:
-  default:
-    switch (version)
-    {
-    case 1:
-    default:
-      mNamespaces->add(SBML_XMLNS_L3V1);
       break;
     }
     break;
